--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   device_info: ^1.0.0
   provider: ^4.3.2+3
   flutter_svg: ^0.19.2+1
-  #  flushbar: ^1.10.4
   another_flushbar: ^1.10.8
   flutter_local_notifications: ^3.0.3
   geolocator: ^6.1.13
   geocoding: ^1.0.5
-  location: ^3.2.1
   intl: ^0.16.1
+  workmanager: ^0.2.3
+
 
 
 
