--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   geolocator: ^6.1.13
   geocoding: ^1.0.5
   intl: ^0.16.1
-  workmanager: ^0.2.3
+  observable_ish: ^2.1.5
+  stacked_hooks: ^0.1.3+2
 
 
 
@@ -58,6 +59,7 @@ dev_dependencies:
   auto_route_generator: ^0.6.9
   injectable_generator: ^1.0.4
   json_serializable: ^3.5.0
+  flutter_hooks: ^0.15.0
 
   integration_test:
     sdk: flutter
