--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   intl: ^0.16.1
   observable_ish: ^2.1.5
   stacked_hooks: ^0.1.3+2
-
+  workmanager: ^0.2.0
+  url_launcher: ^5.7.10
+  date_time_picker: ^1.1.0
 
 
 
