--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   workmanager: ^0.2.0
   url_launcher: ^5.7.10
   date_time_picker: ^1.1.0
+  connectivity: ^2.0.2
+  data_connection_checker: ^0.3.4
 
 
 
